# shitpost-hackathon

./: .gitignore  CLAUDE_CONTEXT.md  NOTES.md  README.md
backend/: .env.example  package-lock.json  package.json  supabase-setup.sql  supabase-video-migration.sql
backend/scripts/: migrate-templates.js
backend/src/: index.js
backend/src/routes/: ipfs.js  leaderboard.js  memes.js  scraper.js  solana.js  templates.js
backend/src/services/: pinata.js
contracts/solana/: Anchor.toml  package-lock.json  package.json  tsconfig.json
contracts/solana/programs/shitpost_pro/: Cargo.toml
contracts/solana/programs/shitpost_pro/src/: lib.rs  state.rs
contracts/solana/programs/shitpost_pro/src/instructions/: admin.rs  burn.rs  initialize.rs  mod.rs
contracts/solana/programs/shitpost_pro/src_full_backup/instructions/: mint.rs  pit.rs
contracts/solana/scripts/: devnet-test.ts  init.mjs  initialize.ts
contracts/solana/test-ledger/: faucet-keypair.json  genesis.bin.failed  genesis.tar.bz2.failed
contracts/solana/tests/: initialize.ts  shitpost_pro.ts
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/public/templates/: metadata.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: ReportModal.css  ReportModal.jsx
frontend/src/config/: constants.js  memeTemplates.js  memes.js  solana.js  stickers.js  (+1 more)
landing/: index.html  package-lock.json  package.json  script.js  styles.css
landing/src/: main.jsx
scripts/buyback/: .gitignore  check-balance.ts  jupiter-buyback.ts  package.json  wrap-sol.ts
(+169 files in other folders)
