[package]
name = "shitpost-pro"
version = "0.1.0"
description = "ShitpostPro NFT program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shitpost_pro"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
mpl-token-metadata = "3.2.3"
